; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_privacy.c_btm_ble_exe_disable_resolving_list.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_privacy.c_btm_ble_exe_disable_resolving_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (...)* }

@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @btm_ble_exe_disable_resolving_list() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @btm_ble_suspend_resolving_list_activity()
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %6, label %4

4:                                                ; preds = %0
  %5 = load i32, i32* @FALSE, align 4
  store i32 %5, i32* %1, align 4
  br label %20

6:                                                ; preds = %0
  %7 = call %struct.TYPE_2__* (...) @controller_get_interface()
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32 (...)*, i32 (...)** %8, align 8
  %10 = call i32 (...) %9()
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %6
  %13 = load i32, i32* @FALSE, align 4
  %14 = call i32 @btm_ble_vendor_enable_irk_feature(i32 %13)
  br label %18

15:                                               ; preds = %6
  %16 = load i32, i32* @FALSE, align 4
  %17 = call i32 @btsnd_hcic_ble_set_addr_resolution_enable(i32 %16)
  br label %18

18:                                               ; preds = %15, %12
  %19 = load i32, i32* @TRUE, align 4
  store i32 %19, i32* %1, align 4
  br label %20

20:                                               ; preds = %18, %4
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}

declare dso_local i32 @btm_ble_suspend_resolving_list_activity(...) #1

declare dso_local %struct.TYPE_2__* @controller_get_interface(...) #1

declare dso_local i32 @btm_ble_vendor_enable_irk_feature(i32) #1

declare dso_local i32 @btsnd_hcic_ble_set_addr_resolution_enable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
